--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#team-Members">
+                                    <a href="#team">
                                         <i class="fa-solid fa-hand-holding-heart"></i>Team Members
                                     </a>
                                 </li>
@@ -377,6 +377,120 @@
             </div>
         </div>
         <!-- End Testimonials section -->
+
+        <!-- Start Team Members section -->
+        <div class="team-members" id="team">
+            <div class="container">
+                <h2 class="main-heading">team members</h2>
+                <div class="cards">
+                    <section class="member">
+                        <div class="image-icon">
+                            <img src="images/team-1.jpg" alt="team member">
+                            <div class="icon">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
+                        <h3>name</h3>
+                        <p>simple short description</p>
+                    </section>
+                    <section class="member">
+                        <div class="image-icon">
+                            <img src="images/team-1.jpg" alt="team member">
+                            <div class="icon">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
+                        <h3>name</h3>
+                        <p>simple short description</p>
+                    </section>
+                    <section class="member">
+                        <div class="image-icon">
+                            <img src="images/team-1.jpg" alt="team member">
+                            <div class="icon">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
+                        <h3>name</h3>
+                        <p>simple short description</p>
+                    </section>
+                    <section class="member">
+                        <div class="image-icon">
+                            <img src="images/team-1.jpg" alt="team member">
+                            <div class="icon">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
+                        <h3>name</h3>
+                        <p>simple short description</p>
+                    </section>
+                    <section class="member">
+                        <div class="image-icon">
+                            <img src="images/team-1.jpg" alt="team member">
+                            <div class="icon">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
+                        <h3>name</h3>
+                        <p>simple short description</p>
+                    </section>
+                    <section class="member">
+                        <div class="image-icon">
+                            <img src="images/team-1.jpg" alt="team member">
+                            <div class="icon">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
+                        <h3>name</h3>
+                        <p>simple short description</p>
+                    </section>
+                    <section class="member">
+                        <div class="image-icon">
+                            <img src="images/team-1.jpg" alt="team member">
+                            <div class="icon">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
+                        <h3>name</h3>
+                        <p>simple short description</p>
+                    </section>
+                    <section class="member">
+                        <div class="image-icon">
+                            <img src="images/team-1.jpg" alt="team member">
+                            <div class="icon">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="#"><i class="fa-brands fa-github"></i></a>
+                            </div>
+                        </div>
+                        <h3>name</h3>
+                        <p>simple short description</p>
+                    </section>
+                </div>
+            </div>
+        </div>
+        <!-- End Team Members section -->
 
         <!-- Main custom scripts -->
         <script src="js/main.js"></script>
