--- a/index.html
+++ b/index.html
@@ -492,6 +492,70 @@
         </div>
         <!-- End Team Members section -->
 
+        <!-- Start services section -->
+        <div class="services">
+            <div class="container">
+                <h2 class="main-heading">services</h2>
+                <div class="cards">
+                    <div class="service">
+                        <div class="title">
+                            <i class="fas fa-user-shield fa-4x"></i>
+                            <h3>security</h3>
+                        </div>
+                        <div class="footer">
+                            <a href="#">details</a>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <div class="title">
+                            <i class="fas fa-user-shield fa-4x"></i>
+                            <h3>security</h3>
+                        </div>
+                        <div class="footer">
+                            <a href="#">details</a>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <div class="title">
+                            <i class="fas fa-user-shield fa-4x"></i>
+                            <h3>security</h3>
+                        </div>
+                        <div class="footer">
+                            <a href="#">details</a>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <div class="title">
+                            <i class="fas fa-user-shield fa-4x"></i>
+                            <h3>security</h3>
+                        </div>
+                        <div class="footer">
+                            <a href="#">details</a>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <div class="title">
+                            <i class="fas fa-user-shield fa-4x"></i>
+                            <h3>security</h3>
+                        </div>
+                        <div class="footer">
+                            <a href="#">details</a>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <div class="title">
+                            <i class="fas fa-user-shield fa-4x"></i>
+                            <h3>security</h3>
+                        </div>
+                        <div class="footer">
+                            <a href="#">details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End services section -->
+
         <!-- Main custom scripts -->
         <script src="js/main.js"></script>
     </body>
