--- a/index.html
+++ b/index.html
@@ -556,6 +556,35 @@
         </div>
         <!-- End services section -->
 
+        <!-- Start skills section -->
+        <div class="skills">
+            <div class="container">
+                <h2 class="main-heading">our skills</h2>
+                <div class="content">
+                    <img src="images/skills.svg" alt="skills">
+                    <section class="progresses">
+                        <h3>html</h3>
+                        <div class="porg">
+                            <span style="width: 80%" data-progress="80%"></span>
+                        </div>
+                        <h3>css</h3>
+                        <div class="porg">
+                            <span style="width: 85%" data-progress="85%"></span>
+                        </div>
+                        <h3>javascript</h3>
+                        <div class="porg">
+                            <span style="width: 70%" data-progress="70%"></span>
+                        </div>
+                        <h3>bootstrap</h3>
+                        <div class="porg">
+                            <span style="width: 80%" data-progress="80%"></span>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+        <!-- End skills section -->
+
         <!-- Main custom scripts -->
         <script src="js/main.js"></script>
     </body>
