--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#our-skills">
+                                    <a href="#skills">
                                         <i class="fa-solid fa-hand-holding-heart"></i>our skills
                                     </a>
                                 </li>
@@ -493,7 +493,7 @@
         <!-- End Team Members section -->
 
         <!-- Start services section -->
-        <div class="services">
+        <div class="services" id="services">
             <div class="container">
                 <h2 class="main-heading">services</h2>
                 <div class="cards">
@@ -557,29 +557,37 @@
         <!-- End services section -->
 
         <!-- Start skills section -->
-        <div class="skills">
+        <div class="our-skills" id="skills">
             <div class="container">
                 <h2 class="main-heading">our skills</h2>
                 <div class="content">
                     <img src="images/skills.svg" alt="skills">
-                    <section class="progresses">
-                        <h3>html</h3>
-                        <div class="porg">
-                            <span style="width: 80%" data-progress="80%"></span>
-                        </div>
-                        <h3>css</h3>
-                        <div class="porg">
-                            <span style="width: 85%" data-progress="85%"></span>
-                        </div>
-                        <h3>javascript</h3>
-                        <div class="porg">
-                            <span style="width: 70%" data-progress="70%"></span>
-                        </div>
-                        <h3>bootstrap</h3>
-                        <div class="porg">
-                            <span style="width: 80%" data-progress="80%"></span>
-                        </div>
-                    </section>
+                    <div class="skills">
+                        <section>
+                            <h3>html</h3>
+                            <div class="porg">
+                                <span style="width: 80%" data-progress="80%"></span>
+                            </div>
+                        </section>
+                        <section>
+                            <h3>css</h3>
+                            <div class="porg">
+                                <span style="width: 85%" data-progress="85%"></span>
+                            </div>
+                        </section>
+                        <section>
+                            <h3>javascript</h3>
+                            <div class="porg">
+                                <span style="width: 70%" data-progress="70%"></span>
+                            </div>
+                        </section>
+                        <section>
+                            <h3>bootstrap</h3>
+                            <div class="porg">
+                                <span style="width: 80%" data-progress="80%"></span>
+                            </div>
+                        </section>   
+                    </div>
                 </div>
             </div>
         </div>
