--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <!-- End features section -->
 
         <!-- Start Testimonials section -->
-        <div class="testimonials" id="testimonials">
+        <section class="testimonials" id="testimonials">
             <div class="container">
                 <h2 class="main-heading">testmonials</h2>
                 <div class="cards">
@@ -375,11 +375,11 @@
                     </section>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- End Testimonials section -->
 
         <!-- Start Team Members section -->
-        <div class="team-members" id="team">
+        <section class="team-members" id="team">
             <div class="container">
                 <h2 class="main-heading">team members</h2>
                 <div class="cards">
@@ -489,11 +489,11 @@
                     </section>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- End Team Members section -->
 
         <!-- Start services section -->
-        <div class="services" id="services">
+        <section class="services" id="services">
             <div class="container">
                 <h2 class="main-heading">services</h2>
                 <div class="cards">
@@ -553,11 +553,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- End services section -->
 
         <!-- Start skills section -->
-        <div class="our-skills" id="skills">
+        <section class="our-skills" id="skills">
             <div class="container">
                 <h2 class="main-heading">our skills</h2>
                 <div class="content">
@@ -590,8 +590,68 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- End skills section -->
+
+
+        <!-- Start footer section -->
+        <section class="footer">
+            <div class="container">
+                <section class="info">
+                    <h2>elmuhtarif</h2>
+                    <div class="icon">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fa-brands fa-github"></i></a>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae recusandae cupiditate at.</p>
+                </section>
+                <ul class="links">
+                    <li>
+                        <a href="#">important link</a>
+                    </li>
+                    <li>
+                        <a href="#">important link</a>
+                    </li>
+                    <li>
+                        <a href="#">important link</a>
+                    </li>
+                    <li>
+                        <a href="#">important link</a>
+                    </li>
+                    <li>
+                        <a href="#">important link</a>
+                    </li>
+                </ul>
+                <section class="address">
+                    <article>
+                        <i class="fas fa-map-marker-alt fa-fw"></i>
+                        <p>Lorem, ipsum dolor sit amet consectetur</p>
+                    </article>
+                    <article>
+                        <i class="far fa-clock fa-fw"></i>
+                        <p>Lorem, ipsum dolor sit amet consectetur</p>
+                    </article>
+                    <article>
+                        <i class="fas fa-phone-volume fa-fw"></i>
+                        <p>Lorem, ipsum dolor sit amet consectetur</p>
+                    </article>
+                </section>
+                <section class="projects">
+                    <img src="images/feaT-1.jpg" alt="project">
+                    <img src="images/feaT-1.jpg" alt="project">
+                    <img src="images/feaT-1.jpg" alt="project">
+                    <img src="images/feaT-1.jpg" alt="project">
+                    <img src="images/feaT-1.jpg" alt="project">
+                    <img src="images/feaT-1.jpg" alt="project">
+                </section>
+            </div>
+        </section>
+        <!-- End footer section -->
+
+        <footer>
+            copyright &copy; 2022 <a href="https://elmohtarif2410.github.io/My-portofolio/">ahmed elmuhtarif</a>
+        </footer>
 
         <!-- Main custom scripts -->
         <script src="js/main.js"></script>
