--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
 
         
         <!-- Start footer section -->
-        <section class="footer">
+        <footer class="footer">
             <div class="container">
                 <section class="info">
                     <h2>elmuhtarif</h2>
@@ -690,12 +690,13 @@
                     <img src="images/feaT-1.jpg" alt="project">
                 </section>
             </div>
-        </section>
+            <div class="copy-right">
+                copyright &copy; 2022 <a href="https://elmohtarif2410.github.io/My-portofolio/">ahmed elmuhtarif</a>
+            </div>
+        </footer>
         <!-- End footer section -->
 
-        <footer>
-            copyright &copy; 2022 <a href="https://elmohtarif2410.github.io/My-portofolio/">ahmed elmuhtarif</a>
-        </footer>
+
 
         <!-- Main custom scripts -->
         <script src="js/main.js"></script>
