--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                     </div>
                 </div>
                 <form>
-                    <input type="email">
+                    <input type="email" placeholder="Enter Your Email">
                     <input type="submit" value="subscribe">
                 </form>
             </div>
